# raytracing-renderer

./: .gitignore  CMakeLists.txt  FeatureList.txt  HOW_TO_RUN.txt  Makefile  README.md  combine_files.py  combined.txt  obj_to_mesh.py  output.ppm  render_scenes.sh  test_output.ppm
include/: BRDF.h  BVHNode.h  BlinnPhongShader.h  BoundingBox.h  Camera.h  CheckerboardTexture.h  Color.h  Cylinder.h  GaussianBlur.h  Image.h  Intersection.h  LambertianBRDF.h  Light.h  Material.h  MicrofacetBRDF.h  Object.h  Plane.h  Ray.h  Raytracer.h  Scene.h  SceneLoader.h  Sphere.h  Texture.h  Triangle.h  Vector3.h
scenes/: scene.json  scene_cube.json  scene_defocus.json  scene_refract.json  scene_texture.json
scenes/area_lights/: scene_2.json  scene_area_light.json
scenes/brdf/: scene.json
scenes/refraction/: mirror_image.json  scene.json  scene_defocus_2.json  scene_texture.json
src/: BVHNode.cpp  BlinnPhongShader.cpp  BoundingBox.cpp  Camera.cpp  CheckerboardTexture.cpp  Color.cpp  Cylinder.cpp  GaussianBlur.cpp  Image.cpp  LambertianBRDF.cpp  Light.cpp  MicrofacetBRDF.cpp  Plane.cpp  Ray.cpp  Raytracer.cpp  Scene.cpp  SceneLoader.cpp  Sphere.cpp  Triangle.cpp  Vector3.cpp  main.cpp
test/: test_binary_rendering_mode.cpp  test_camera.cpp  test_cylinder.cpp  test_openmp.cpp  test_ray.cpp  test_raytracer.cpp  test_scene_loader.cpp  test_shadow.cpp  test_sphere.cpp  test_triangle.cpp
